--- a/eMovieTickets/appsettings.json
+++ b/eMovieTickets/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    //"DefaultConnectionString": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=ecommerce-app-db;Integrated Security=True;Pooling=False;Encrypt=False;Trust Server Certificate=False",
+    "DefaultConnectionString": "Server=tcp:emovieticket-app-server.database.windows.net,1433;Initial Catalog=emovietickets-app-db;Persist Security Info=False;User ID=eticket-admin;Password=coding@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "AllowedHosts": "*"
 }
